# LearnOpenGL2

./: CMakeLists.txt
LearnOpenGL/: CMakeLists.txt  glad.c  main.cpp  shader.cpp  shader.h
LearnOpenGL/shaders/: fragment  vertex
